objects/CMOS_BU_IP_Project__c.object
<CustomObject>
    <fields>
        <fullName>Access_Time__c</fullName>
        <label>Access Time</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjustment_Range_DLL__c</fullName>
        <label>Adjustment Range DLL</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjustment_Resolution_DLL__c</fullName>
        <label>Adjustment Resolution DLL</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Approved__c</fullName>
        <label>Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Requested__c</fullName>
        <label>Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Analog_Voltage__c</fullName>
        <label>Analog Voltage</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aspect_Ratio_Column_Fold__c</fullName>
        <label>Aspect Ratio (Column Fold)</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automotive_Grade__c</fullName>
        <label>Automotive Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>Grade 1</fullName>
                </value>
                <value>
                    <fullName>Grade 0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BIST_Interface__c</fullName>
        <label>BIST Interface</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_End_Design_Kit_Delivery_Date__c</fullName>
        <label>Back End Design Kit Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Back_End_Design_Kit_Required_Date__c</fullName>
        <label>Back End Design Kit Required Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bitcell_Size__c</fullName>
        <label>Bitcell Size</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bond_Pad_Opening_Size__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IP</label>
        <referenceTo>Base_IP__c</referenceTo>
        <relationshipLabel>CMOS BU IP Projects</relationshipLabel>
        <relationshipName>CMOS_BU_IP_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bond_Pad_Pitch__c</fullName>
        <label>Bond Pad Pitch</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bump_Array__c</fullName>
        <label>Bump Array</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Comments__c</fullName>
        <label>Business Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <inlineHelpText>Select the Business Unit that will be managing this project.</inlineHelpText>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASIC</fullName>
                </value>
                <value>
                    <fullName>CMOS</fullName>
                </value>
                <value>
                    <fullName>RF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C4 Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Circuit_Under_Pad_CUP__c</fullName>
        <label>Circuit Under Pad (CUP)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_Voltage_Domain_s__c</fullName>
        <label>Core Voltage Domain(s)</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Voltage_Support__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IP</label>
        <referenceTo>Base_IP__c</referenceTo>
        <relationshipLabel>CMOS BU IP Projects (IP)</relationshipLabel>
        <relationshipName>CMOS_BU_IP_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Voltage__c</fullName>
        <label>Core Voltage</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNL__c</fullName>
        <label>DNL</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_BCCB_Capital_Council_Approved__c</fullName>
        <label>Date BCCB/Capital Council Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Request_1st_Submitted_to_BCCB__c</fullName>
        <description>Date request first submitted to BCCB/Capital Council</description>
        <inlineHelpText>Date request first submitted to BCCB/Capital Council</inlineHelpText>
        <label>Date Request 1st Submitted to BCCB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deep_N_Well_support__c</fullName>
        <label>Deep N-Well support</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Enter a descriptive title that includes the technology, what is the IP and how the IP is used.</inlineHelpText>
        <label>Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dynamic_Power_Based_on_X1_and_X2__c</fullName>
        <label>Dynamic Power Based on X1 and X2</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endurance_Target__c</fullName>
        <label>Endurance Target</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Erase_Current__c</fullName>
        <label>Erase Current</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Erase_Time__c</fullName>
        <label>Erase Time</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Area_Xmm_x_Ymm__c</fullName>
        <label>Estimated Area (X um x Y um)</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_nominal_power_x8_PMA__c</fullName>
        <label>Estimated nominal power (x8 PMA)</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_IP__c</fullName>
        <label>Update Existing IP?</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fin_Range__c</fullName>
        <label>Fin Range</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fout_Range__c</fullName>
        <label>Fout Range</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency_Max__c</fullName>
        <label>Frequency Max</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Front_End_Design_Kit_Delivery_Date__c</fullName>
        <label>Front End Design Kit Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Front_End_Design_Kit_Required_Date__c</fullName>
        <label>Front End Design Kit Required Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gate_Density__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gate Density (kgates/mm2)</label>
        <referenceTo>Base_IP__c</referenceTo>
        <relationshipName>IP_Requests_For_GS51</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Height_Logic_um__c</fullName>
        <label>Height Logic (um)</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INL__c</fullName>
        <label>INL</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_License_Fee__c</fullName>
        <label>IP License Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IP_Subtype__c</fullName>
        <label>IP Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>IP_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Audio ADC</fullName>
                </value>
                <value>
                    <fullName>Audio DAC</fullName>
                </value>
                <value>
                    <fullName>Audio Codec</fullName>
                </value>
                <value>
                    <fullName>Video DAC</fullName>
                </value>
                <value>
                    <fullName>Other ADC</fullName>
                </value>
                <value>
                    <fullName>Other DAC</fullName>
                </value>
                <value>
                    <fullName>PLL</fullName>
                </value>
                <value>
                    <fullName>DLL</fullName>
                </value>
                <value>
                    <fullName>WiFi AFE</fullName>
                </value>
                <value>
                    <fullName>Temperature Sensor</fullName>
                </value>
                <value>
                    <fullName>Voltage Sensor</fullName>
                </value>
                <value>
                    <fullName>LDO regulator</fullName>
                </value>
                <value>
                    <fullName>Power-On-Reset</fullName>
                </value>
                <value>
                    <fullName>DC-DC converter</fullName>
                </value>
                <value>
                    <fullName>mmWave</fullName>
                </value>
                <value>
                    <fullName>Bandgap</fullName>
                </value>
                <value>
                    <fullName>Bias Generator</fullName>
                </value>
                <value>
                    <fullName>Delay</fullName>
                </value>
                <value>
                    <fullName>GPIO</fullName>
                </value>
                <value>
                    <fullName>Oscillator</fullName>
                </value>
                <value>
                    <fullName>Voltage Reference</fullName>
                </value>
                <value>
                    <fullName>LVDS</fullName>
                </value>
                <value>
                    <fullName>I2C</fullName>
                </value>
                <value>
                    <fullName>SSTL18</fullName>
                </value>
                <value>
                    <fullName>SSTL</fullName>
                </value>
                <value>
                    <fullName>Clock Receiver</fullName>
                </value>
                <value>
                    <fullName>Single Port SRAM High Density</fullName>
                </value>
                <value>
                    <fullName>Single Port SRAM High Speed</fullName>
                </value>
                <value>
                    <fullName>Dual Port SRAM High Density</fullName>
                </value>
                <value>
                    <fullName>Dual Port SRAM High Speed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IP_Type__c</fullName>
        <inlineHelpText>IP Type synchronize with PLM IP Type selection</inlineHelpText>
        <label>IP Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AMS</fullName>
                </value>
                <value>
                    <fullName>IO</fullName>
                </value>
                <value>
                    <fullName>LOGIC</fullName>
                </value>
                <value>
                    <fullName>MEMORY</fullName>
                </value>
                <value>
                    <fullName>NVM</fullName>
                </value>
                <value>
                    <fullName>PHY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_O_Configuration__c</fullName>
        <label>I/O Configuration</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input_Voltage_V__c</fullName>
        <label>Input Voltage (V)</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latchup_Immunity__c</fullName>
        <label>Latchup Immunity</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Library_Types_Needed__c</fullName>
        <label>Library Types Needed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Power Management Kit (PMK)</fullName>
                </value>
                <value>
                    <fullName>Retention Kit (RKLO)</fullName>
                </value>
                <value>
                    <fullName>Engineering Change Order (ECO)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Load_Current__c</fullName>
        <label>Load Current</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memory_Density_Range__c</fullName>
        <label>Memory Density Range</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memory_Density__c</fullName>
        <label>Memory Density</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memory_Type__c</fullName>
        <label>Memory Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>eFuse</fullName>
                </value>
                <value>
                    <fullName>OTP</fullName>
                </value>
                <value>
                    <fullName>eFlash</fullName>
                </value>
                <value>
                    <fullName>MRAM</fullName>
                </value>
                <value>
                    <fullName>EEPROM</fullName>
                </value>
                <value>
                    <fullName>MTP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Metal_Stack__c</fullName>
        <label>Metal Stack</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Target_Process_Node__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - 9M_3Mx_4Cx_2Gx_LB1</fullName>
                </value>
                <value>
                    <fullName>2 - 9M_3Mx_2Cx_2Kx_2Gx_LB1</fullName>
                </value>
                <value>
                    <fullName>3 - 11M_3Mx_4Cx_2Kx_2Gx_LB1</fullName>
                </value>
                <value>
                    <fullName>4 - 10M_5Mx_3Cx_2Gx_LB1</fullName>
                </value>
                <value>
                    <fullName>5 - 9M_3Mx_5Cx_1Gx_LB1,2</fullName>
                </value>
                <value>
                    <fullName>6 - 10M_3Mx_4Cx_2Kx_1Gx_LB1</fullName>
                </value>
                <value>
                    <fullName>9 - 13M_3Mx_2Cx_4Kx_2Hx_2Gx_LB1,3</fullName>
                </value>
                <value>
                    <fullName>10 - 9M_3Mx_4Cx_1Hx_1Gx_LB1,3</fullName>
                </value>
                <value>
                    <fullName>1 - 8M_2Mx_4Cx_1Bx_1Ix_LB (LB thick)</fullName>
                </value>
                <value>
                    <fullName>2 - 6M_2Mx_3Cx_1Ix_LB (LB thick)</fullName>
                </value>
                <value>
                    <fullName>3 - 10M_2Mx_6Cx_2Ix_LB (LB thick)</fullName>
                </value>
                <value>
                    <fullName>4 - 7M_2Mx_4Cx_1Ox_LB (LB thick)</fullName>
                </value>
                <value>
                    <fullName>5 - 9M_2Mx_6Cx_1Ox_LB (LB thick)</fullName>
                </value>
                <value>
                    <fullName>6 - 10M_2Mx_6Cx_1Ix_1Ox_LB (LB thick)</fullName>
                </value>
                <value>
                    <fullName>7 - 9M_2Mx_5Cx_2Jx_LB (LB thick)</fullName>
                </value>
                <value>
                    <fullName>8 - 10M_2Mx_4Cx_2Bx_2Jx_LB (LB thick)</fullName>
                </value>
                <value>
                    <fullName>9 - 8M_2Mx_5Cx_1Jx_LB (LB thick)</fullName>
                </value>
                <value>
                    <fullName>10 - 6M_2Mx_3Cx_1Ix_LB__VZ. (700nm LB thickness)</fullName>
                </value>
                <value>
                    <fullName>11 - 9M_2Mx_ 5Cx_1Jx_1Ox_LB (LB thick)</fullName>
                </value>
                <value>
                    <fullName>12 - 10M_2Mx_4Cx_2Bx_1Jx_1Ox_LB (LB thick)</fullName>
                </value>
                <value>
                    <fullName>13 - 7M_2Mx_3Cx_1Ix_1Ox_LB (LB thick)</fullName>
                </value>
                <value>
                    <fullName>14 - 7M_2Mx_4Cx_1Ix_LB</fullName>
                </value>
                <value>
                    <fullName>15 - 7M_2Mx_3Cx_2Ix_LB</fullName>
                </value>
                <value>
                    <fullName>16 - 8M_2Mx_4Cx_2Ix_LB</fullName>
                </value>
                <value>
                    <fullName>17 - 8M_2Mx_4Cx_1Ix_1Ox_LB</fullName>
                </value>
                <value>
                    <fullName>1 - 6U1x_2U2x_2T8x_LB</fullName>
                </value>
                <value>
                    <fullName>2 - 6U1x_2T8x_LB</fullName>
                </value>
                <value>
                    <fullName>3 - 5U1x_2U2x_2T8x_LB</fullName>
                </value>
                <value>
                    <fullName>4 - 5U1x_2T8x_LB</fullName>
                </value>
                <value>
                    <fullName>7 - 5U1x_1T8x_LB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minimum_CDM_Required__c</fullName>
        <label>Minimum CDM Required</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_HBM_Required__c</fullName>
        <label>Minimum HBM Required</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_MM_Required__c</fullName>
        <inlineHelpText>No longer JEDEC standard</inlineHelpText>
        <label>Minimum MM Required</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NRE_IP_Development_Fee__c</fullName>
        <label>NRE IP Development Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Standard_PVT_Support__c</fullName>
        <defaultValue>&apos;Please save the form to view Standard PVT table.&apos;</defaultValue>
        <inlineHelpText>e.g. TT, 1.00V, 25C/SS, 0.90V, 125C/FF, 1.10V, -40C</inlineHelpText>
        <label>Non Standard PVT Support</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Lanes__c</fullName>
        <label>Number of Lanes</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Tracks__c</fullName>
        <label>Number of Tracks</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_cells_in_library__c</fullName>
        <label>Number of cells in library</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_metal_layers__c</fullName>
        <label>Number of metal layers</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_Temperature_Range_junction__c</fullName>
        <label>Operating Temperature Range (junction)</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDK_Availability_Date__c</fullName>
        <label>PDK Availability Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PHY_Description__c</fullName>
        <label>PHY Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PLL_Voltage__c</fullName>
        <label>PLL Voltage</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMA_Device_Usage__c</fullName>
        <label>PMA Device Usage</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PVT__c</fullName>
        <formula>IF(ISPICKVAL( Target_Process_Node__c, &apos;14LPP-XL&apos;), 
IF(RecordType.Name == &apos;LOGIC&apos;, Image(&quot;/resource/PVT_14LPP_XL_LOGIC&quot;,&quot;&quot;,300,500), 
IF(RecordType.Name == &apos;IO&apos;, Image(&quot;/resource/PVT_14LPP_XL_IO&quot;,&quot;&quot;,300,600), 
IF(OR(RecordType.Name == &apos;AMS&apos;, RecordType.Name == &apos;NVM&apos;, RecordType.Name == &apos;PHY&apos;), Image(&quot;/resource/PVT_14LPP_XL_AMS_NVM_PHY&quot;,&quot;&quot;,220,500), &apos;&apos;) ) ) , 

IF(ISPICKVAL( Target_Process_Node__c, &apos;22FDX&apos;), 
IF(RecordType.Name == &apos;LOGIC&apos;, Image(&quot;/resource/PVT_22FDX_LOGIC&quot;,&quot;&quot;,300,600), 
IF(OR(RecordType.Name == &apos;AMS&apos;, RecordType.Name == &apos;NVM&apos;, RecordType.Name == &apos;PHY&apos;), Image(&quot;/resource/PVT_22FDX_AMS_NVM_PHY&quot;,&quot;&quot;,300,400), IF(RecordType.Name == &apos;IO&apos;, Image(&quot;/resource/PVT_22FDX_IO&quot;,&quot;&quot;,300,500), IF(RecordType.Name == &apos;MEMORY&apos;, Image(&quot;/resource/PVT_22FDX_MEMORY&quot;,&quot;&quot;,400,900), &apos;&apos;) ) ) ) , 

IF(ISPICKVAL( Target_Process_Node__c, &apos;28SLP&apos;), IF(RecordType.Name == &apos;LOGIC&apos;, Image(&quot;/resource/PVT_28SLP_LOGIC&quot;,&quot;&quot;,300,700), IF(RecordType.Name == &apos;IO&apos;, Image(&quot;/resource/PVT_28SLP_IO&quot;,&quot;&quot;,300,700), IF(OR(RecordType.Name == &apos;AMS&apos;, RecordType.Name == &apos;NVM&apos;, RecordType.Name == &apos;PHY&apos;), Image(&quot;/resource/PVT_28SLP_AMS_NVM_PHY&quot;,&quot;&quot;,200,250), &apos;&apos;) ) ) , 

IF(ISPICKVAL(Target_Process_Node__c, &apos;7LP&apos;),IF(OR(RecordType.Name == &apos;LOGIC&apos;,RecordType.Name == &apos;MEMORY&apos;), Image(&quot;/resource/PVT_7LP_LOGIC_Memory&quot;,&quot;&quot;,300,500),
IF(RecordType.Name == &apos;IO&apos;, Image(&quot;/resource/PVT_7LP_IO&quot;,&quot;&quot;,300,600),
IF(RecordType.Name == &apos;AMS&apos;, Image(&quot;/resource/PVT_7LP_Analog&quot;,&quot;&quot;,300,600),&apos;&apos;)))

,&apos;&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard PVT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_Jitter__c</fullName>
        <label>Period Jitter</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Poly_Orientation__c</fullName>
        <label>Poly Orientation</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_Architecture__c</fullName>
        <label>Power Architecture</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_Down_States__c</fullName>
        <label>Power Down States</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_Supply_V__c</fullName>
        <label>Power Supply (V)</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_IP_Vendor__c</fullName>
        <label>Preferred IP Vendor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Process_Geometry__c</fullName>
        <label>Process Geometry</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0.007UM</fullName>
                </value>
                <value>
                    <fullName>0.014UM</fullName>
                </value>
                <value>
                    <fullName>0.022UM</fullName>
                </value>
                <value>
                    <fullName>0.028UM</fullName>
                </value>
                <value>
                    <fullName>0.04UM</fullName>
                </value>
                <value>
                    <fullName>0.055UM</fullName>
                </value>
                <value>
                    <fullName>0.065UM</fullName>
                </value>
                <value>
                    <fullName>0.09UM</fullName>
                </value>
                <value>
                    <fullName>0.11UM</fullName>
                </value>
                <value>
                    <fullName>0.13UM</fullName>
                </value>
                <value>
                    <fullName>0.15UM</fullName>
                </value>
                <value>
                    <fullName>0.18UM</fullName>
                </value>
                <value>
                    <fullName>0.35UM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Current__c</fullName>
        <label>Program Current</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Time__c</fullName>
        <label>Program Time</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Protocol_and_Standard_Support_Required__c</fullName>
        <label>Protocol and Standard Support Required</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quiescent_Current__c</fullName>
        <label>Quiescent Current</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROM_Cell_Type__c</fullName>
        <inlineHelpText>eg. Via1</inlineHelpText>
        <label>ROM Cell Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_W_Operation_Modes__c</fullName>
        <inlineHelpText>Multiselect</inlineHelpText>
        <label>R/W Operation Modes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Functional</fullName>
                </value>
                <value>
                    <fullName>BIST</fullName>
                </value>
                <value>
                    <fullName>Scan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Read_Current__c</fullName>
        <label>Read Current</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redundancy__c</fullName>
        <label>Redundancy</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reg_Out_put_Voltage_V__c</fullName>
        <label>Reg Out put Voltage (V)</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Silicon_Validation_Report_Date__c</fullName>
        <label>Requested Silicon Validation Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Required_Channel_Lengths__c</fullName>
        <label>Required Channel Lengths</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Critical_Poly_Pitch_CPP_support__c</fullName>
        <label>Required Critical Poly Pitch(CPP)support</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Feature_Set__c</fullName>
        <label>Required Feature Set</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Vt_s__c</fullName>
        <label>Required Vt&apos;s</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retention_Target__c</fullName>
        <inlineHelpText>Post Cycling for other than OTP</inlineHelpText>
        <label>Retention Target</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Royalty_Rate__c</fullName>
        <label>Royalty Rate</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sampling_Rate__c</fullName>
        <label>Sampling Rate</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector_Size_bits__c</fullName>
        <label>Sector Size (bits)</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_IP_Vendor__c</fullName>
        <label>Selected IP Vendor</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Silicon_Validation_Report_Delivery_Date__c</fullName>
        <label>Silicon Validation Report Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Speed_Gbps__c</fullName>
        <label>Speed Gbps</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Type_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Last person to update the Stage Type</inlineHelpText>
        <label>Stage Type Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IP_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_Type__c</fullName>
        <label>Stage Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>ASIC Opportunity</fullName>
                </value>
                <value>
                    <fullName>Enabled IP Project</fullName>
                </value>
                <value>
                    <fullName>Internal Development Project</fullName>
                </value>
                <value>
                    <fullName>Pricing Team - Approved</fullName>
                </value>
                <value>
                    <fullName>CapEx Team - Approved</fullName>
                </value>
                <value>
                    <fullName>CapEx Team Review</fullName>
                    <isActive>false</isActive>
                    <label>CapEx Team Review</label>
                </value>
                <value>
                    <fullName>Pricing Team Review</fullName>
                    <isActive>false</isActive>
                    <label>Pricing Team Review</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>